[project]
name = "acornio"
version = "0.0.1"
description = "AcornIO is a modern ASGI server built for Python ASGI applications."
authors = [
    {name = "joegasewicz",email = "joegasewicz@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
