[project]
name = "flask_example"
version = "0.1.0"
description = ""
authors = [
    {name = "joegasewicz",email = "joegasewicz@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask[async] (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
